# joke-sharing-app

./: Dockerfile  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  db.py  jokes.py  moderation.py  schema.sql
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/jokes/: edit.html  leave.html  list.html  my_jokes.html  view.html
flaskr/templates/moderation/: edit_user.html  users.html
instance/: flaskr.sqlite
